--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <h5>quinto</h5>
     <h6>sexto</h6>    
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus molestiae dolores, autem ex nisi rerum dicta soluta sit modi cupiditate sapiente repellat ratione. Dignissimos ex nisi ab, magni distinctio nobis.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis vitae facere repudiandae debitis nulla praesentium, adipisci quia? Sint numquam vero hic nobis, obcaecati at provident repellat explicabo doloribus odit natus.</p>
+    <p>Lorem ips2um dolor sit amet consectetur adipisicing elit. Veritatis vitae facere repudiandae debitis nulla praesentium, adipisci quia? Sint numquam vero hic nobis, obcaecati at provident repellat explicabo doloribus odit natus.</p>
 </body>
 </html>
